--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
 </head>
 
@@ -32,10 +33,10 @@
 
 
     <div class="containerButtons">
-        <button type="button" class="btn btn-primary btn-lg" value="" id="crystal1">Crystal 1</button>
-        <button type="button" class="btn btn-secondary btn-lg" value="" id="crystal2">Crystal 2</button>
-        <button type="button" class="btn btn-primary btn-lg" value="" id="crystal3">Crystal 3</button>
-        <button type="button" class="btn btn-secondary btn-lg" value="" id="crystal4">Crystal 4</button>
+        <button type="button" class="btn btn-primary btn-lg" id="crystal1">Crystal 1</button>
+        <button type="button" class="btn btn-secondary btn-lg" id="crystal2">Crystal 2</button>
+        <button type="button" class="btn btn-primary btn-lg" id="crystal3">Crystal 3</button>
+        <button type="button" class="btn btn-secondary btn-lg" id="crystal4">Crystal 4</button>
     </div>
 
 
