--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 
 
     <div class="containerButtons">
-        <button type="button" class="btn btn-primary btn-lg" id="crystal1">Crystal 1</button>
-        <button type="button" class="btn btn-secondary btn-lg" id="crystal2">Crystal 2</button>
-        <button type="button" class="btn btn-primary btn-lg" id="crystal3">Crystal 3</button>
-        <button type="button" class="btn btn-secondary btn-lg" id="crystal4">Crystal 4</button>
+        <button type="image" src="assets/images/crystals-01.png" id="crystal1">Crystal 1</button>
+        <button type="image" src="assets/images/crystals-02.png" id="crystal2">Crystal 2</button>
+        <button type="image" src="assets/images/crystals-03.png" id="crystal3">Crystal 3</button>
+        <button type="image" src="assets/images/crystals-04.png" id="crystal4">Crystal 4</button>
     </div>
 
 
