--- a/index.html
+++ b/index.html
@@ -3,41 +3,123 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Word Game</title>
+    <title>Crystal Game</title>
 
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
 
 </head>
 
 <body>
-    <div class="containerTitle">
-        <div class="row justify-content-center">
-            <div class="col-8">
-                <h4> Crystal Game </h4>
+
+    <div class="row">
+        <div class="col">
+        </div>
+        <div class="col">
+            <div class="containerTitle">
+                <div class="d-flex justify-content-center">
+                    <h4> Crystal Game </h4>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="d-flex justify-content-end">
+                <div class="dropdown">
+                    <div class="d-flex justify-content-center">
+                        <span>Instructions</span>
+                        <div class="dropdown-content">
+                            <p>Welcome to the Crystal Game!
+                                <br>
+                                <br>
+                                Click on a crystal to add it to your total.
+                                <br>
+                                If your answer equals the number given, you win.
+                                If your answer goes over the random number, you lose.
+                                <br>
+                                Every new game, the crystals will be given different random values.
+                                Good luck! </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
     </div>
 
-    <div class="containerNum">
-        <div class="row justify-content-center">
-            <div class="col-8">
-                <h4 id="randomNum"></h4>
+
+    <br>
+    <br>
+
+    <div class="row">
+        <div class="col">
+        </div>
+        <div class="col">
+            <div class="containerNum">
+                <h3 id="randomNum"></h3>
             </div>
+        </div>
+        <div class="col">
+            <div class="containerNum">
+                <h3 id="guessedAdd">0</h3>
+            </div>
+        </div>
+        <div class="col">
         </div>
     </div>
 
 
-    <div class="containerButtons">
-        <button type="image" src="assets/images/crystals-01.png" id="crystal1">Crystal 1</button>
-        <button type="image" src="assets/images/crystals-02.png" id="crystal2">Crystal 2</button>
-        <button type="image" src="assets/images/crystals-03.png" id="crystal3">Crystal 3</button>
-        <button type="image" src="assets/images/crystals-04.png" id="crystal4">Crystal 4</button>
+    <br>
+    <br>
+
+    <div class="row">
+        <div class="flexBox containerButtons">
+            <input type="image" src="assets/images/crystals-01.png" id="crystal1"></input>
+            <input type="image" src="assets/images/crystals-02.png" id="crystal2"></input>
+            <input type="image" src="assets/images/crystals-03.png" id="crystal3"></input>
+            <input type="image" src="assets/images/crystals-04.png" id="crystal4"></input>
+        </div>
     </div>
+
+    <br>
+    <br>
+
+    <div class="row">
+        <div class="col">
+        </div>
+        <div class="col">
+            <div class="containerScore">
+                <div class="d-flex justify-content-center">
+                    <h3 id="winTitle">Wins:</h3>
+                </div>
+         
+                <div class="d-flex justify-content-center">
+                    <h3 id="wins">0</h3>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="containerScore">
+                <div class="d-flex justify-content-center">
+                    <h3 id="lossTitle">Losses:</h3>
+                </div>
+             
+                <div class="d-flex justify-content-center">
+                    <h3 id="loss">0</h3>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+        </div>
+    </div>
+
+
+
+
 
 
 
